Capgemini Japan Careers - Big Data Architect (Data Lake Architect). IT Data Domain Architect - Bank of Hawaii Careers. Data Architect, Decision Analytics Services ... - EXL Service | Careers. Medidata Solutions Careers - Senior Enterprise Architect. Sr.Software Engineer-Big Data, Cloud Architecture -21835 #0224 job at Radiant Digital in Temple Terrace, FL, powered by JobScore. Unusual Ventures - Senior Data Warehouse Architect.  Amplifon Careers - Global IT Data Architect. Datatonic - Jobs: Cloud Architect (GCP) - Apply online. Lead Data Architect | Kalos Consulting, Inc.. Hummingbird Technologies Ltd - Jobs: Big Data Architect - Apply .... Verifone Careers - Bigdata Architect. Diverse Lynx LLC Windows Data Center Architect Administrator | SmartRecruiters. Dataiku - Hadoop Architect EMEA. Big Data Technical Architect - Mumbai - Careers. Bmtech group Data Architect | SmartRecruiters. Datastrong Careers - Data Architect. Data Architect (SZ) - Klook - Career Page. Job Application for Data Architecture Engineer at Blue Apron. Sr Data Architect, Cloud in United States, United States | Careers at .... Nortal - Data Architect. ServiceNow Careers - Principal Database Architect. Quast Ltd - Jobs: Data Architect - Apply online. Centare - Data Architect. IT Pros Health Care Data Architect  ($130K-$160K / Immediate Health Care Benefits / 401k / 20-days PTO / Plus More) | SmartRecruiters. Data/Technical Architect-Contingent Worker-21458 #0193 job at Radiant Digital in Irving, TX, powered by JobScore. Data Architect - RELX Careers. Technical Data Architect - Experian Careers. Software Engineer Database/Data Architect (11259) | Sundial Software Career Opportunities. Techo-Bloc Business Intelligence Analyst - Data Architect, ETL | SmartRecruiters. CoreTechs Inc. Master Data Management (MDM) Architect | SmartRecruiters. Intech Recruitment. Data Architect | SmartRecruiters. Datastrong Careers - Big Data Architect. Data &amp; Analytics Architect EMEA - NIKE, Inc. Careers. Endo Pharmac

--- a/data-architect.html
+++ b/data-architect.html
@@ -96,7 +96,7 @@ Developer Central. Solutions. Retail ? Hospitality ? Acquirers ? Petro. Support.
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-22</p>
 <hr/>
-<h5><a href='https://huron.avature.net/careers/JobDetail/Big-Data-Technical-Architect-Mumbai/5788'>Big Data Technical Architect - Mumbai - Careers</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://huron.avature.net/careers/JobDetail/Big-Data-Technical-Architect-Mumbai/5788'>Big Data Technical Architect - Mumbai - Careers</a></h5> 
 <p><span class="badge badge-light">Mumbai</span></p>
 <p>Posted on: 2019-07-22</p>
 <hr/>
@@ -166,7 +166,7 @@ high performing applications using NOSQL DB and BigData...</p>
 <p><span class="badge badge-light">Canada</span></p>
 <p>Posted on: 2019-07-18</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/CoreTechsInc/743999691589440-master-data-management-mdm-architect'>CoreTechs Inc. Master Data Management (MDM) Architect | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/CoreTechsInc/743999691589440-master-data-management-mdm-architect'>CoreTechs Inc. Master Data Management (MDM) Architect | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-18</p>
 <hr/>
@@ -178,7 +178,7 @@ high performing applications using NOSQL DB and BigData...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-17</p>
 <hr/>
-<h5><a href='https://nike.referrals.selectminds.com/jobs/data-analytics-architect-emea-50198'>Data &amp; Analytics Architect EMEA - NIKE, Inc. Careers</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://nike.referrals.selectminds.com/jobs/data-analytics-architect-emea-50198'>Data &amp; Analytics Architect EMEA - NIKE, Inc. Careers</a></h5> 
 <p><span class="badge badge-light">Hilversum, Netherlands</span></p>
 <p>Posted on: 2019-07-17</p>
 <hr/>
@@ -196,7 +196,7 @@ best?...</p>
 <p><span class="badge badge-light">Boston</span></p>
 <p>Posted on: 2019-07-17</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/SprySquaredInc/743999691685548-big-data-architect'>Spry Squared, Inc. Big Data Architect | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/SprySquaredInc/743999691685548-big-data-architect'>Spry Squared, Inc. Big Data Architect | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Denver</span></p>
 <p>Posted on: 2019-07-17</p>
 <hr/>
@@ -329,7 +329,7 @@ object-oriented programming experience to join our IT team as a Data Architect?.
 <p><span class="badge badge-light">San Francisco, CA</span></p>
 <p>Posted on:: 2019-07-07</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://girteka.workable.com/j/37645A16E7'>Girteka Logistics - Jobs: Data Architect - Apply online</a></h5> 
+<h5><a href='https://girteka.workable.com/j/37645A16E7'>Girteka Logistics - Jobs: Data Architect - Apply online</a></h5> 
 <p><span class="badge badge-light">Vilnius Vilnius</span></p>
 <p>Posted on: 2019-07-07</p>
 <hr/>
@@ -356,11 +356,11 @@ Engineering. Requisition #: WD30072470142. Sr. Software Engineer.</p>
 implementation of ETL processes throughout the design, build and maintenance
 ?...</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/CapTechConsulting/743999691160451-data-architect'>CapTech Consulting Data Architect | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/CapTechConsulting/743999691160451-data-architect'>CapTech Consulting Data Architect | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Charlotte, NC</span></p>
 <p>Posted on: 2019-07-04</p>
 <hr/>
-<h5><a href='http://zgfarchitects.applytojob.com/apply/07jhICp5hF/Senior-Data-Strategist'>Senior Data Strategist - ZGF Architects - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://zgfarchitects.applytojob.com/apply/07jhICp5hF/Senior-Data-Strategist'>Senior Data Strategist - ZGF Architects - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-03</p>
 <hr/>
@@ -393,7 +393,7 @@ architecture for a diverse set of customers and industries. The ideal candidate?
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-07-02</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/simplisafe/jobs/1755766'>Job Application for Business Intelligence Datawarehouse Architect at SimpliSafe</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/simplisafe/jobs/1755766'>Job Application for Business Intelligence Datawarehouse Architect at SimpliSafe</a></h5> 
 <p><span class="badge badge-light">Boston, MA</span></p>
 <p>Posted on: 2019-07-02</p>
 <hr/>
@@ -402,7 +402,7 @@ architecture for a diverse set of customers and industries. The ideal candidate?
 <p>Jun 20, 2019 ... Lead Cyber Security System Engineer. Annapolis ... Lead/Principal Cyber 
 Security Engineer, Cyber Operations (TS/SCI Polygraph Clearance). Annapolis?...</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=qnh9Vfws&k=Job&j=oiVk9fwq&__jvst=Employee+Referral&__jvsd=sUv5Pfw3&__jvsc=Twitter&bid=nBv7wKwY&jvi=oiVk9fwq,Job&jvk=Job'>Medidata Solutions Careers - Lead Engineer / Architect</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=qnh9Vfws&k=Job&j=oiVk9fwq&__jvst=Employee+Referral&__jvsd=sUv5Pfw3&__jvsc=Twitter&bid=nBv7wKwY&jvi=oiVk9fwq,Job&jvk=Job'>Medidata Solutions Careers - Lead Engineer / Architect</a></h5> 
 <p><span class="badge badge-light">San Francisco California</span></p>
 <p>Posted on:: 2019-07-01</p>
 <hr/>
@@ -442,12 +442,12 @@ Security Engineer, Cyber Operations (TS/SCI Polygraph Clearance). Annapolis?...<
 <p><span class="badge badge-light">New York, NY</span></p>
 <p>Posted on: 2019-06-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://johnsoncontrols.referrals.selectminds.com/jobs/database-architect-75361'>Database Architect - Johnson Controls Careers</a></h5> 
+<h5><a href='https://johnsoncontrols.referrals.selectminds.com/jobs/database-architect-75361'>Database Architect - Johnson Controls Careers</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>1 day ago ... Who we are: Sensormatic Solutions is on a mission: we are revolutionizing the 
 bricks-and-mortar retail world with innovative products that fuel...</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/wikimedia/jobs/1518484?gh_src=10864eeb1'>Job Application for Database Architect at Wikimedia Foundation</a></h5> 
+<h5><a href='https://boards.greenhouse.io/wikimedia/jobs/1518484?gh_src=10864eeb1'>Job Application for Database Architect at Wikimedia Foundation</a></h5> 
 <p><span class="badge badge-light">San Francisco, CA</span></p>
 <p>Posted on:: 2019-06-28</p>
 <hr/>
