Job Application for Software Engineer (Rust) at Starry. Job Application for Principal System Software Engineer (Linux) at Starry. Job Application for Software Engineer, Node.js at Starry. Magnitude Software Careers - Senior C++ & Go Software Developer. Junior Software Engineer -  Activision Careers. Sr. Software Engineer - Central Tech -  Activision Careers. Job Application for Sr. Software Engineer, Android   at Fender. ServiceNow Careers - Senior Software Engineer. J2 Global Careers - Senior Software Engineer - Java. Northcentral University Careers - Jr. Software Developer. Job Application for Software Engineering Manager at LogDNA. Avant - Senior Software Engineer, DevOps (Remote Ok). GBM Head of Software Engineering (Client Services Platform) | SmartRecruiters. GBM Head of Software Engineering (Financial Services Platform) | SmartRecruiters. Incorta - Senior Software Engineer. Software Engineer, Robotics - Bossanova Robotics - Career Page. Software Engineer, Robot Middleware - Bossanova Robotics - Career Page. Software Engineer, Robot Build and Release - Bossanova Robotics - Career Page. Software Engineer, Robot Reliability and Testing - Bossanova Robotics - Career Page. Contract Technical Recruiter, Software Engineering - Bossanova Robotics - Career Page. Job Application for Lead Software Engineer - Data Pod at Omaze. Software Developer – Electronic products - Itron Careers. Tenable Careers - Software Engineer. Job Application for Lead Software Engineer, Onboard Platforms at Argo AI. Job Application for Software Engineer in Test, Embedded Systems at Argo AI. Job Application for Lead Software Engineer, Simulation at Argo AI. Ancestry - Senior Software Engineer, Front-end. Visa Sr. Software Engineer- EVG | SmartRecruiters. CaziSoft Sr. Full Stack Software Engineer | SmartRecruiters. Visa Senior Software Engineer, DFM - Visa Digital Developer Platform (VDDP) | SmartRecruiters. Job Application for Senior Software Engineer - Mobile at TWG.     Senior Software Develo

--- a/software.html
+++ b/software.html
@@ -39,12 +39,36 @@
   
     <div class="container">
 <!--Begin body here --> 
-<h5><a href='https://boards.greenhouse.io/fender/jobs/1769114'>Job Application for Sr. Software Engineer, Android   at Fender</a></h5> 
+<h5><a href='https://boards.greenhouse.io/starry/jobs/4354718002'>Job Application for Software Engineer (Rust) at Starry</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-07-27</p>
+<hr/>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/starry/jobs/4367384002'>Job Application for Principal System Software Engineer (Linux) at Starry</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-07-27</p>
+<hr/>
+<h5><a href='https://boards.greenhouse.io/starry/jobs/4370392002'>Job Application for Software Engineer, Node.js at Starry</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-07-27</p>
+<hr/>
+<h5><a href='https://jobs.jobvite.com/magnitude/job/orwBafws'>Magnitude Software Careers - Senior C++ & Go Software Developer</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-07-27</p>
+<hr/>
+<h5><a href='https://activision.referrals.selectminds.com/jobs/junior-software-engineer-4038'>Junior Software Engineer -  Activision Careers</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-07-27</p>
+<hr/>
+<h5><a href='https://activision.referrals.selectminds.com/jobs/sr-software-engineer-central-tech-4036'>Sr. Software Engineer - Central Tech -  Activision Careers</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-07-27</p>
+<hr/>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/fender/jobs/1769114'>Job Application for Sr. Software Engineer, Android   at Fender</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
 <h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=q4d9Vfw5&k=Job&j=oiC29fwP&__jvst=Employee+Referral&__jvsd=sKAQ8gw3&__jvsc=Twitter&bid=nuaYVLwN'>ServiceNow Careers - Senior Software Engineer</a></h5> 
-<p><span class="badge badge-light"></span></p>
+<p><span class="badge badge-light">California</span></p>
 <p>Posted on:: 2019-07-27</p>
 <hr/>
 <h5><a href='https://jobs.jobvite.com/j2-global/job/o8Jvafwg'>J2 Global Careers - Senior Software Engineer - Java</a></h5> 
@@ -71,7 +95,7 @@
 <p><span class="badge badge-light">Mexico</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/incorta/8a8730aa-8ffd-42dd-9cae-38307ddcef79'>Incorta - Senior Software Engineer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/incorta/8a8730aa-8ffd-42dd-9cae-38307ddcef79'>Incorta - Senior Software Engineer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -159,7 +183,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://profacebook.applytojob.com/apply/48NWbDkJOw/Software-Engineer-9279803'>Software Engineer (9279803) - PRO Unlimited @ Facebook - Career Page</a></h5> 
+<h5><a href='http://profacebook.applytojob.com/apply/48NWbDkJOw/Software-Engineer-9279803'>Software Engineer (9279803) - PRO Unlimited @ Facebook - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -179,7 +203,7 @@
 <p><span class="badge badge-light">New York, United States</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/ProgressiveTechnologySolutions1/743999692304035-software-developer'>Progressive technology solutions Software Developer | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/ProgressiveTechnologySolutions1/743999692304035-software-developer'>Progressive technology solutions Software Developer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Woodland Hills, CA California North America</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -195,7 +219,7 @@
 <p><span class="badge badge-light">San Francisco</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/varomoney/baf789f9-6a67-4d15-ae4d-4291e431119c'>Varo Money - Senior Software Engineer</a></h5> 
+<h5><a href='https://jobs.lever.co/varomoney/baf789f9-6a67-4d15-ae4d-4291e431119c'>Varo Money - Senior Software Engineer</a></h5> 
 <p><span class="badge badge-light">San Francisco</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -267,7 +291,7 @@
 <p><span class="badge badge-light">Brazil Brazil S?o Paulo Brazil</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/forwardnetworks/e9c8777b-28d0-40f0-b9b5-91249094e4b1'>Forward Networks - Sr. Software Engineer, Backend</a></h5> 
+<h5><a href='https://jobs.lever.co/forwardnetworks/e9c8777b-28d0-40f0-b9b5-91249094e4b1'>Forward Networks - Sr. Software Engineer, Backend</a></h5> 
 <p><span class="badge badge-light">Palo Alto, CA</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -347,7 +371,7 @@ data and machine learning to build the world's fastest-growing travel app -- one
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<h5><a href='https://jobs.crelate.com/portal/genesys/job/hunbxp8tjimt5mqqwxoik18hra'>Senior Software Engineer | GENESYS Consulting Services, Inc.</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.crelate.com/portal/genesys/job/hunbxp8tjimt5mqqwxoik18hra'>Senior Software Engineer | GENESYS Consulting Services, Inc.</a></h5> 
 <p><span class="badge badge-light">Albany, NY</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -379,11 +403,11 @@ data and machine learning to build the world's fastest-growing travel app -- one
 <p><span class="badge badge-light">San Francisco, California</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/roostify/jobs/4327482002'>Job Application for Senior Software Engineer, Backend at Roostify</a></h5> 
+<h5><a href='https://boards.greenhouse.io/roostify/jobs/4327482002'>Job Application for Senior Software Engineer, Backend at Roostify</a></h5> 
 <p><span class="badge badge-light">San Francisco</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/istreamplanet/job/oGoG9fwD'>iStreamPlanet Careers - Senior Software Engineer - Events</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/istreamplanet/job/oGoG9fwD'>iStreamPlanet Careers - Senior Software Engineer - Events</a></h5> 
 <p><span class="badge badge-light">Seattle Atlanta New York Austin Los Angeles Denver Chicago Seattle</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -395,7 +419,7 @@ data and machine learning to build the world's fastest-growing travel app -- one
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<h5><a href='https://ades.join.com/jobs/258537-software-engineer-m-w-vollzeit'>Job @ ADES (Vienna): Software Engineer (m/w) ?Voll... | JOIN</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://ades.join.com/jobs/258537-software-engineer-m-w-vollzeit'>Job @ ADES (Vienna): Software Engineer (m/w) ?Voll... | JOIN</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -407,7 +431,7 @@ data and machine learning to build the world's fastest-growing travel app -- one
 <p><span class="badge badge-light">Noida</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://postman.workable.com/j/69AA5C5A99'>Postman - Jobs: Software Engineer, Intern - Apply online</a></h5> 
+<h5><a href='https://postman.workable.com/j/69AA5C5A99'>Postman - Jobs: Software Engineer, Intern - Apply online</a></h5> 
 <p><span class="badge badge-light">Karnataka, India</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -422,31 +446,6 @@ data and machine learning to build the world's fastest-growing travel app -- one
 <h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qHV9Vfwq&k=Job&j=oERR9fwf&__jvst=Employee+Referral&__jvsd=sEKAqgw9&__jvsc=Twitter&bid=nBlXUKw2'>Jobvite, Inc. Careers - Senior Software Engineer</a></h5> 
 <p><span class="badge badge-light">San Mateo California</span></p>
 <p>Posted on:: 2019-07-26</p>
-<hr/>
-<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qngaVfws&k=Job&j=oxVJ8fw3&__jvst=Employee+Referral&__jvsd=s8eovhw1&__jvsc=Twitter&bid=n8oXUKwC'>Premier Research Careers - Software Developer</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Posted on:: 2019-07-26</p>
-<hr/>
-<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qBM9Vfwb&k=Job&j=oQv29fwg&__jvst=Employee+Referral%3a+Eligible&__jvsd=sNjqMgw3&__jvsc=Twitter&bid=nqiXUKwO'>Apttus Careers - Senior Software Engineer, QA</a></h5> 
-<p><span class="badge badge-light">Bangalore</span></p>
-<p>Posted on:: 2019-07-26</p>
-<hr/>
-<h5><a href='https://www.workable.com/j/862AEDB8B6'>Crossbeam - Jobs: Senior Software Engineer - Apply online</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Jul 19, 2019 ... Apply online for the job of Senior Software Engineer at Crossbeam.</p>
-<hr/>
-<h5><a href='https://www.workable.com/j/A10570EDDA'>riskmethods - Jobs: Software Engineer Machine Learning (m/f/d ...</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Jul 18, 2019 ... Apply online for the job of Software Engineer Machine Learning (m/f/d) at 
-riskmethods.</p>
-<hr/>
-<h5><a href='https://aire.workable.com/j/7F962DF40C'>Application Software Engineer - Apply online - Aire - Jobs</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>5 days ago ... Apply online for the job of Application Software Engineer at Aire.</p>
-<hr/>
-<h5><a href='https://mercari.workable.com/jobs/1004862'>Software Engineer, Architect [Merpay]</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>6 ?? ... Apply online for the job of Software Engineer, Architect [Merpay] at Mercari, inc.</p>
 <hr/>
 
 
